# leethack

./: .env  .env.example  .gitignore  README.md  manage.py  pyproject.toml
config/: api_router.py  urls.py
config/settings/: base.py  local.py  production.py  test.py
leethack/: conftest.py
leethack/api/urls/: v1.py
leethack/core/: apps.py  models.py  utils.py  validators.py
leethack/core/api/: permissions.py
leethack/core/tests/: test_validators.py  utils.py
leethack/hackathons/: admin.py  apps.py  models.py  signals.py
leethack/hackathons/api/v1/: filters.py  permissions.py
leethack/hackathons/migrations/: 0001_initial.py  0002_hackathon_winner.py  0003_hackathon_image.py  0004_alter_hackathon_image.py  0005_alter_hackathon_image.py
leethack/hackathons/tests/: factories.py  test_models.py
leethack/participations/: admin.py  apps.py  models.py
leethack/participations/api/v1/: filters.py
leethack/participations/migrations/: 0001_initial.py  0002_remove_participationrequest_unique_participation_request_user_hackathon_and_more.py
leethack/participations/tests/: factories.py  test_models.py
leethack/users/: admin.py  apps.py  models.py  signals.py
leethack/users/api/: permissions.py
leethack/users/api/serializers/: __init__.py  participation.py  (+1 more)
leethack/users/migrations/: 0001_initial.py  0002_user_profile_background_user_profile_picture.py  0003_alter_user_profile_background_and_more.py  0004_alter_user_profile_picture.py  0005_alter_user_profile_background_and_more.py
leethack/users/tests/: factories.py  test_factories.py  test_models.py
(+43 files in other folders)
